[gd_scene load_steps=36 format=2]

[ext_resource path="res://data/UI/scripts/phone_ui.gd" type="Script" id=1]
[ext_resource path="res://data/graphics/phone_ui.png" type="Texture" id=2]
[ext_resource path="res://data/graphics/phone_time.png" type="Texture" id=3]
[ext_resource path="res://data/UI/graphics/phone_games.png" type="Texture" id=4]
[ext_resource path="res://data/UI/graphics/phone_call.png" type="Texture" id=5]
[ext_resource path="res://data/UI/graphics/phone_mail.png" type="Texture" id=6]
[ext_resource path="res://data/UI/graphics/phone_archive.png" type="Texture" id=7]
[ext_resource path="res://data/UI/graphics/phone_calendar.png" type="Texture" id=8]
[ext_resource path="res://data/UI/graphics/phone_internet.png" type="Texture" id=9]
[ext_resource path="res://data/fonts/ReemKufi-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://data/graphics/phone_home.png" type="Texture" id=11]
[ext_resource path="res://data/UI/nodes/contact_node.tscn" type="PackedScene" id=12]
[ext_resource path="res://data/UI/nodes/contact_node_mom.tscn" type="PackedScene" id=13]
[ext_resource path="res://data/UI/scripts/ui_archive.gd" type="Script" id=14]
[ext_resource path="res://data/graphics/UI/gallery_page_highlight.png" type="Texture" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 31.2339

[sub_resource type="CircleShape2D" id=2]
radius = 32.7649

[sub_resource type="CircleShape2D" id=3]
radius = 31.3622

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31.1558, 26.7208 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31.9663, 28.0093 )

[sub_resource type="CircleShape2D" id=6]
radius = 32.844

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 27.6513, 26.2312 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 64.321, 64.5651 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 64.321, 64.5651 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 63.5472, 63.7911 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 63.5471, 63.7911 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64.321, 64.5649 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 64.321, 63.7911 )

[sub_resource type="CircleShape2D" id=15]
radius = 16.8418

[sub_resource type="CircleShape2D" id=16]
radius = 16.6479

[sub_resource type="CircleShape2D" id=17]
radius = 16.1838

[sub_resource type="CircleShape2D" id=18]
radius = 17.0277

[sub_resource type="CircleShape2D" id=19]
radius = 16.3567

[sub_resource type="CircleShape2D" id=20]
radius = 15.9418

[node name="phone_ui" type="Area2D"]
input_pickable = false
script = ExtResource( 1 )

[node name="homescreen" type="Sprite" parent="."]
position = Vector2( 961.087, 1855.43 )
texture = ExtResource( 2 )

[node name="time" type="Sprite" parent="homescreen"]
position = Vector2( 0.71344, -182.663 )
texture = ExtResource( 3 )

[node name="phone" type="Sprite" parent="homescreen"]
position = Vector2( -124.489, 262.294 )
texture = ExtResource( 5 )

[node name="phone" type="Area2D" parent="homescreen/phone"]

[node name="col" type="CollisionShape2D" parent="homescreen/phone/phone"]
shape = SubResource( 1 )

[node name="mail" type="Sprite" parent="homescreen"]
position = Vector2( -42.7255, 261.395 )
texture = ExtResource( 6 )

[node name="mail" type="Area2D" parent="homescreen/mail"]

[node name="col" type="CollisionShape2D" parent="homescreen/mail/mail"]
shape = SubResource( 2 )

[node name="internet" type="Sprite" parent="homescreen"]
position = Vector2( 41.2285, 261.116 )
texture = ExtResource( 9 )

[node name="internet" type="Area2D" parent="homescreen/internet"]

[node name="col" type="CollisionShape2D" parent="homescreen/internet/internet"]
shape = SubResource( 3 )

[node name="archive" type="Sprite" parent="homescreen"]
position = Vector2( -44.7763, 175.755 )
texture = ExtResource( 7 )

[node name="archive" type="Area2D" parent="homescreen/archive"]

[node name="col" type="CollisionShape2D" parent="homescreen/archive/archive"]
shape = SubResource( 4 )

[node name="calendar" type="Sprite" parent="homescreen"]
position = Vector2( 119.947, 260.579 )
texture = ExtResource( 8 )

[node name="calendar" type="Area2D" parent="homescreen/calendar"]

[node name="col" type="CollisionShape2D" parent="homescreen/calendar/calendar"]
shape = SubResource( 5 )

[node name="games" type="Sprite" parent="homescreen"]
position = Vector2( -125.376, 172.128 )
texture = ExtResource( 4 )

[node name="games" type="Area2D" parent="homescreen/games"]

[node name="col" type="CollisionShape2D" parent="homescreen/games/games"]
shape = SubResource( 6 )

[node name="notification_bar" type="Panel" parent="homescreen"]
modulate = Color( 0.133333, 0.596078, 0.701961, 1 )
margin_left = -178.087
margin_top = -304.43
margin_right = 177.913
margin_bottom = -264.43
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="network" type="Label" parent="homescreen/notification_bar"]
margin_left = 2.05334
margin_top = 2.56665
margin_right = 48.0533
margin_bottom = 16.5667
text = "YooNet"

[node name="battery" type="Label" parent="homescreen/notification_bar"]
margin_left = 309.277
margin_top = 5.63354
margin_right = 355.277
margin_bottom = 35.6335
custom_fonts/font = SubResource( 7 )
text = "99%"

[node name="fx" type="Tween" parent="."]

[node name="home" type="Sprite" parent="."]
visible = false
position = Vector2( 960.912, 2130.09 )
z_index = 50
texture = ExtResource( 11 )

[node name="home" type="Area2D" parent="home"]

[node name="col" type="CollisionShape2D" parent="home/home"]
position = Vector2( 0, 5.14551 )
shape = SubResource( 8 )

[node name="apps" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phone" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
margin_left = 783.0
margin_top = 1589.0
margin_right = 1139.0
margin_bottom = 2168.0
mouse_filter = 2

[node name="header" type="Label" parent="apps/phone"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "Contacts"

[node name="pressQtoclose" type="Label" parent="apps/phone"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="contact_node" parent="apps/phone" instance=ExtResource( 12 )]
margin_left = 18.8366
margin_top = 18.8365
margin_right = 338.837
margin_bottom = 78.8365
mouse_filter = 2

[node name="contact_node2" parent="apps/phone" instance=ExtResource( 13 )]
margin_left = 18.0
margin_top = 91.8398
margin_right = 338.0
margin_bottom = 151.84

[node name="mail" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
visible = false
margin_left = 783.0
margin_top = 1590.0
margin_right = 1139.0
margin_bottom = 2168.0

[node name="header" type="Label" parent="apps/mail"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "YooMail"

[node name="pressQtoclose" type="Label" parent="apps/mail"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="internet" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
visible = false
margin_left = 783.0
margin_top = 1588.0
margin_right = 1139.0
margin_bottom = 2168.0

[node name="header" type="Label" parent="apps/internet"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "YooBrowser"

[node name="pressQtoclose" type="Label" parent="apps/internet"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="archive" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
visible = false
margin_left = 783.0
margin_top = 1588.0
margin_right = 1139.0
margin_bottom = 2168.0
mouse_filter = 2
script = ExtResource( 14 )

[node name="header" type="Label" parent="apps/archive"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "Archive"

[node name="pressQtoclose" type="Label" parent="apps/archive"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="Sprite1" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 100, 140 )
z_index = 99

[node name="sprite1" type="Area2D" parent="apps/archive/Sprite1"]
z_index = 99

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite1/sprite1"]
shape = SubResource( 9 )

[node name="Sprite2" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 260, 140 )

[node name="sprite2" type="Area2D" parent="apps/archive/Sprite2"]
position = Vector2( -160, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite2/sprite2"]
position = Vector2( 159.399, -0.773804 )
shape = SubResource( 10 )

[node name="Sprite3" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 100.992, 289.409 )

[node name="sprite3" type="Area2D" parent="apps/archive/Sprite3"]
position = Vector2( -0.992004, -149.409 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite3/sprite3"]
position = Vector2( 0, 148.566 )
shape = SubResource( 11 )

[node name="Sprite4" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 260.77, 290.917 )

[node name="sprite4" type="Area2D" parent="apps/archive/Sprite4"]
position = Vector2( -160.77, -150.917 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite4/sprite4"]
position = Vector2( 160.947, 150.887 )
shape = SubResource( 12 )

[node name="Sprite5" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 104.006, 438.636 )

[node name="sprite5" type="Area2D" parent="apps/archive/Sprite5"]
position = Vector2( -4.00598, -298.636 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite5/sprite5"]
position = Vector2( 4.6427, 299.453 )
shape = SubResource( 13 )

[node name="Sprite6" type="Sprite" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 262.277, 440.144 )

[node name="sprite6" type="Area2D" parent="apps/archive/Sprite6"]
position = Vector2( -162.277, -300.144 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="apps/archive/Sprite6/sprite6"]
position = Vector2( 162.494, 299.453 )
shape = SubResource( 14 )

[node name="fx" type="Tween" parent="apps/archive"]

[node name="page1" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( -2.3327, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page1"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page1"]
margin_left = 52.0
margin_top = 534.0
margin_right = 60.0
margin_bottom = 548.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="col" type="CollisionShape2D" parent="apps/archive/page1"]
position = Vector2( 55.3, 541.801 )
shape = SubResource( 15 )

[node name="page2" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 48.9868, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page2"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page2"]
margin_left = 52.0
margin_top = 535.0
margin_right = 60.0
margin_bottom = 549.0
text = "2"

[node name="col" type="CollisionShape2D" parent="apps/archive/page2"]
position = Vector2( 56.0501, 541.501 )
shape = SubResource( 16 )

[node name="page3" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 101.473, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page3"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page3"]
margin_left = 52.0
margin_top = 535.0
margin_right = 60.0
margin_bottom = 549.0
text = "3"

[node name="col" type="CollisionShape2D" parent="apps/archive/page3"]
position = Vector2( 56.05, 541.5 )
shape = SubResource( 17 )

[node name="page4" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 152.792, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page4"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page4"]
margin_left = 52.0
margin_top = 535.0
margin_right = 60.0
margin_bottom = 549.0
text = "4"

[node name="col" type="CollisionShape2D" parent="apps/archive/page4"]
position = Vector2( 57.0001, 541.5 )
shape = SubResource( 18 )

[node name="page5" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 202.945, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page5"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page5"]
margin_left = 52.0
margin_top = 535.0
margin_right = 60.0
margin_bottom = 549.0
text = "5"

[node name="col" type="CollisionShape2D" parent="apps/archive/page5"]
position = Vector2( 57.0002, 540.551 )
shape = SubResource( 19 )

[node name="page6" type="Area2D" parent="apps/archive" groups=[
"gallery",
]]
position = Vector2( 255.431, 0 )

[node name="highlight" type="Sprite" parent="apps/archive/page6"]
visible = false
position = Vector2( 55.9849, 541.188 )
texture = ExtResource( 16 )

[node name="num" type="Label" parent="apps/archive/page6"]
margin_left = 52.0
margin_top = 535.0
margin_right = 60.0
margin_bottom = 549.0
text = "6"

[node name="col" type="CollisionShape2D" parent="apps/archive/page6"]
position = Vector2( 56.05, 541.5 )
shape = SubResource( 20 )

[node name="calendar" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
visible = false
margin_left = 783.0
margin_top = 1588.0
margin_right = 1139.0
margin_bottom = 2168.0

[node name="header" type="Label" parent="apps/calendar"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "YooCalendar"

[node name="pressQtoclose" type="Label" parent="apps/calendar"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="games" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]
visible = false
margin_left = 783.0
margin_top = 1589.0
margin_right = 1139.0
margin_bottom = 2168.0

[node name="header" type="Label" parent="apps/games"]
margin_left = 144.0
margin_top = 47.8871
margin_right = 199.0
margin_bottom = 61.8871
text = "Games"

[node name="pressQtoclose" type="Label" parent="apps/games"]
margin_left = 129.0
margin_top = 595.0
margin_right = 234.0
margin_bottom = 609.0
text = "Press Q to close"

[node name="full_view" type="Panel" parent="apps"]
visible = false
margin_left = 295.007
margin_top = 1689.44
margin_right = 455.007
margin_bottom = 1849.44

[node name="sprite" type="Sprite" parent="apps/full_view"]
position = Vector2( 79.3818, 79.4451 )
z_index = 103

[node name="contacts" type="Panel" parent="apps" groups=[
"UI_lvl_2",
]]

[connection signal="input_event" from="homescreen/phone/phone" to="." method="_on_phone_input_event"]
[connection signal="mouse_entered" from="homescreen/phone/phone" to="." method="_on_phone_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/phone/phone" to="." method="_on_phone_mouse_exited"]
[connection signal="input_event" from="homescreen/mail/mail" to="." method="_on_mail_input_event"]
[connection signal="mouse_entered" from="homescreen/mail/mail" to="." method="_on_mail_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/mail/mail" to="." method="_on_mail_mouse_exited"]
[connection signal="input_event" from="homescreen/internet/internet" to="." method="_on_internet_input_event"]
[connection signal="mouse_entered" from="homescreen/internet/internet" to="." method="_on_internet_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/internet/internet" to="." method="_on_internet_mouse_exited"]
[connection signal="input_event" from="homescreen/archive/archive" to="." method="_on_archive_input_event"]
[connection signal="mouse_entered" from="homescreen/archive/archive" to="." method="_on_archive_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/archive/archive" to="." method="_on_archive_mouse_exited"]
[connection signal="input_event" from="homescreen/calendar/calendar" to="." method="_on_calendar_input_event"]
[connection signal="mouse_entered" from="homescreen/calendar/calendar" to="." method="_on_calendar_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/calendar/calendar" to="." method="_on_calendar_mouse_exited"]
[connection signal="input_event" from="homescreen/games/games" to="." method="_on_games_input_event"]
[connection signal="mouse_entered" from="homescreen/games/games" to="." method="_on_games_mouse_entered"]
[connection signal="mouse_exited" from="homescreen/games/games" to="." method="_on_games_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite1/sprite1" to="apps/archive" method="_on_sprite1_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite1/sprite1" to="apps/archive" method="_on_sprite1_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite1/sprite1" to="apps/archive" method="_on_sprite1_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite2/sprite2" to="apps/archive" method="_on_sprite2_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite2/sprite2" to="apps/archive" method="_on_sprite2_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite2/sprite2" to="apps/archive" method="_on_sprite2_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite3/sprite3" to="apps/archive" method="_on_sprite3_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite3/sprite3" to="apps/archive" method="_on_sprite3_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite3/sprite3" to="apps/archive" method="_on_sprite3_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite4/sprite4" to="apps/archive" method="_on_sprite4_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite4/sprite4" to="apps/archive" method="_on_sprite4_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite4/sprite4" to="apps/archive" method="_on_sprite4_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite5/sprite5" to="apps/archive" method="_on_sprite5_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite5/sprite5" to="apps/archive" method="_on_sprite5_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite5/sprite5" to="apps/archive" method="_on_sprite5_mouse_exited"]
[connection signal="input_event" from="apps/archive/Sprite6/sprite6" to="apps/archive" method="_on_sprite6_input_event"]
[connection signal="mouse_entered" from="apps/archive/Sprite6/sprite6" to="apps/archive" method="_on_sprite6_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/Sprite6/sprite6" to="apps/archive" method="_on_sprite6_mouse_exited"]
[connection signal="input_event" from="apps/archive/page1" to="apps/archive" method="_on_page1_input_event"]
[connection signal="mouse_entered" from="apps/archive/page1" to="apps/archive" method="_on_page1_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page1" to="apps/archive" method="_on_page1_mouse_exited"]
[connection signal="input_event" from="apps/archive/page2" to="apps/archive" method="_on_page2_input_event"]
[connection signal="mouse_entered" from="apps/archive/page2" to="apps/archive" method="_on_page2_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page2" to="apps/archive" method="_on_page2_mouse_exited"]
[connection signal="input_event" from="apps/archive/page3" to="apps/archive" method="_on_page3_input_event"]
[connection signal="mouse_entered" from="apps/archive/page3" to="apps/archive" method="_on_page3_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page3" to="apps/archive" method="_on_page3_mouse_exited"]
[connection signal="input_event" from="apps/archive/page4" to="apps/archive" method="_on_page4_input_event"]
[connection signal="mouse_entered" from="apps/archive/page4" to="apps/archive" method="_on_page4_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page4" to="apps/archive" method="_on_page4_mouse_exited"]
[connection signal="input_event" from="apps/archive/page5" to="apps/archive" method="_on_page5_input_event"]
[connection signal="mouse_entered" from="apps/archive/page5" to="apps/archive" method="_on_page5_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page5" to="apps/archive" method="_on_page5_mouse_exited"]
[connection signal="input_event" from="apps/archive/page6" to="apps/archive" method="_on_page6_input_event"]
[connection signal="mouse_entered" from="apps/archive/page6" to="apps/archive" method="_on_page6_mouse_entered"]
[connection signal="mouse_exited" from="apps/archive/page6" to="apps/archive" method="_on_page6_mouse_exited"]
